apps/syncthing/syncthing-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
spec:
  serviceName: syncthing
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
      app.kubernetes.io/instance: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
        app.kubernetes.io/instance: syncthing
    spec:
      imagePullSecrets:
        - name: registry-pass
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: syncthing
          # renovate: datasource=docker depName=syncthing/syncthing
          image: syncthing/syncthing:2.1.6
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
          command: ["/bin/sh", "-c"]
          args:
            - |
              set -e
              FLAGS=""
              FLAGS="$FLAGS --no-port-probing"
              exec syncthing serve --home="/var/syncthing" $FLAGS
          ports:
            - {name: gui, containerPort: 8384, protocol: TCP}
            - {name: st-tcp, containerPort: 22000, protocol: TCP}
            - {name: st-udp, containerPort: 22000, protocol: UDP}
            - {name: disco, containerPort: 21027, protocol: UDP}
          volumeMounts:
            - name: data
              mountPath: /var/syncthing
          readinessProbe:
            tcpSocket: {port: 8384}
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket: {port: 8384}
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 80Mi
            limits:
              memory: 512Mi
      volumes:
        - name: init
          configMap:
            name: syncthing-init
        - name: data
          persistentVolumeClaim:
            claimName: data-syncthing-syncthing-0
