apps/syncthing/syncthing-service-gui.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/instance: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: gui
      protocol: TCP
